# math-516-numerical-analysis-II-SP26

./: ASSIGNMENTS.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
src/numanalysislib/basis/: _abstract.py  affine.py  power.py
tests/: test_affine.py  test_basis_abstract.py
