[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "numanalysislib"
version = "0.1.0"
description = "Collaborative Numerical Analysis Library"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]